# seomcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hermes-agent.http.example.json  hermes-agent.mcp.example.json  pyproject.toml
scripts/: hermes-http-start.ps1  hermes-start.ps1
src/seo_data_reader_mcp/: __init__.py  server.py
tests/: test_server.py
