[project]
name = "seo-data-reader-mcp"
version = "0.1.0"
description = "Read-only MCP server for WordPress, Search Console, and GA4 SEO data."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
seo-data-reader-mcp = "seo_data_reader_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
